# GDHistogram

./: .gitignore  Procfile  README.md  pyproject.toml  railway.toml  requirements.txt  run.py  setup.py
docs/: index.html
gdhistogram/: __init__.py  __main__.py  config.py  embedded_credentials.py  main.py  web_app.py
gdhistogram/analysis/: __init__.py  diff_engine.py  event_detector.py  metrics_engine.py
gdhistogram/api/: __init__.py  google_client.py  revision_fetcher.py  snapshot_exporter.py
gdhistogram/auth/: __init__.py  oauth_manager.py  token_storage.py
gdhistogram/storage/: __init__.py  database.py
gdhistogram/ui/: __init__.py  app.py  widgets.py
gdhistogram/ui/screens/: __init__.py  analysis.py  auth.py  config.py  document.py  export.py  results.py  setup.py  welcome.py
gdhistogram/visualization/: __init__.py  histogram.py
tests/: __init__.py  test_diff_engine.py  test_event_detector.py  test_histogram.py  test_metrics_engine.py  test_storage.py
